--- a/plantuml-parser-core/build.gradle
+++ b/plantuml-parser-core/build.gradle
@@ -12,9 +12,14 @@ repositories {
 }
 
 dependencies {
-    compile "com.github.javaparser:javaparser-core:3.23.1"
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+    compile 'com.github.javaparser:javaparser-core:3.24.8'
 
-    compile "commons-io:commons-io:2.8.0"
+    compile 'commons-io:commons-io:2.11.0'
+
+    testImplementation 'junit:junit:4.13.2'
+    testAnnotationProcessor 'junit:junit:4.13.2'
 }
 
 tasks.withType(JavaCompile) {
